src/snapshots/yaml_subset__tests__block_scalars_with_indent_and_empty_lines.snap
---
source: src/lib.rs
expression: parsed
---
Ok(
    Document {
        leading_comments: [],
        items: [
            Yaml(
                Hash(
                    [
                        Element(
                            HashElement {
                                key: "newlines",
                                value: AliasedYaml {
                                    alias: Some(
                                        "newline",
                                    ),
                                    value: LiteralString(
                                        [
                                            "  Several lines of text,",
                                            "with some \"quotes\" of various 'types',",
                                            "and also a blank line:",
                                            "",
                                            "and some text with",
                                            "  extra indentation",
                                            "on the next line,",
                                            "plus another line at the end.",
                                            "",
                                        ],
                                        Clip,
                                    ),
                                },
                            },
                        ),
                        Element(
                            HashElement {
                                key: "folded",
                                value: AliasedYaml {
                                    alias: Some(
                                        "folded",
                                    ),
                                    value: FoldedString(
                                        [
                                            "  Several lines of text,",
                                            "with some \"quotes\" of various 'types',",
                                            "and also a blank line:",
                                            "",
                                            "and some text with",
                                            "  extra indentation",
                                            "on the next line,",
                                            "plus another line at the end.",
                                            "",
                                            "",
                                            "",
                                        ],
                                        Clip,
                                    ),
                                },
                            },
                        ),
                        Element(
                            HashElement {
                                key: "test",
                                value: AliasedYaml {
                                    alias: None,
                                    value: UnquotedString(
                                        "5",
                                    ),
                                },
                            },
                        ),
                    ],
                ),
            ),
        ],
    },
)
