src/snapshots/yaml_subset__tests__commas_in_unquoted_string-2.snap
---
source: src/lib.rs
expression: parsed.unwrap().format().unwrap()
---
---
inline_array: [ test, 5, hi ]
s: &key test, 5, hi
