src/snapshots/yaml_subset__tests__commas_in_unquoted_string.snap
---
source: src/lib.rs
expression: parsed
---
Ok(
    Document {
        items: [
            Yaml(
                Hash(
                    [
                        Element(
                            HashElement {
                                key: "inline_array",
                                value: AliasedYaml {
                                    alias: None,
                                    value: Array(
                                        [
                                            Element(
                                                AliasedYaml {
                                                    alias: None,
                                                    value: UnquotedString(
                                                        "test",
                                                    ),
                                                },
                                            ),
                                            Element(
                                                AliasedYaml {
                                                    alias: None,
                                                    value: UnquotedString(
                                                        "5",
                                                    ),
                                                },
                                            ),
                                            Element(
                                                AliasedYaml {
                                                    alias: None,
                                                    value: UnquotedString(
                                                        "hi",
                                                    ),
                                                },
                                            ),
                                        ],
                                    ),
                                },
                            },
                        ),
                        Element(
                            HashElement {
                                key: "s",
                                value: AliasedYaml {
                                    alias: Some(
                                        "key",
                                    ),
                                    value: UnquotedString(
                                        "test, 5, hi",
                                    ),
                                },
                            },
                        ),
                    ],
                ),
            ),
        ],
    },
)
