src/snapshots/yaml_subset__tests__comment_before_first_key.snap
---
source: src/lib.rs
expression: parsed
---
Ok(
    Document {
        leading_comments: [],
        items: [
            Yaml(
                Hash(
                    [
                        Element(
                            HashElement {
                                key: "default_value",
                                value: AliasedYaml {
                                    alias: None,
                                    value: Hash(
                                        [
                                            Element(
                                                HashElement {
                                                    key: "content",
                                                    value: AliasedYaml {
                                                        alias: None,
                                                        value: Hash(
                                                            [
                                                                Comment(
                                                                    " NOTE: the 'original' non-shuffled array advr is used, rather than x_advr !!!",
                                                                ),
                                                                Comment(
                                                                    " Better advice to be written ...? This one does not correctly extend to users of this template!!",
                                                                ),
                                                                Element(
                                                                    HashElement {
                                                                        key: "nl",
                                                                        value: AliasedYaml {
                                                                            alias: None,
                                                                            value: DoubleQuotedString(
                                                                                [
                                                                                    String(
                                                                                        "Gebruik het merkwaardig product {if(a*b>0, advr[0], advr[1])}",
                                                                                    ),
                                                                                ],
                                                                            ),
                                                                        },
                                                                    },
                                                                ),
                                                                Element(
                                                                    HashElement {
                                                                        key: "en",
                                                                        value: AliasedYaml {
                                                                            alias: None,
                                                                            value: DoubleQuotedString(
                                                                                [
                                                                                    String(
                                                                                        "Use the special product {if(a*b>0, advr[0], advr[1])}",
                                                                                    ),
                                                                                ],
                                                                            ),
                                                                        },
                                                                    },
                                                                ),
                                                            ],
                                                        ),
                                                    },
                                                },
                                            ),
                                        ],
                                    ),
                                },
                            },
                        ),
                    ],
                ),
            ),
        ],
    },
)
