src/snapshots/yaml_subset__tests__comments_before_start-2.snap
---
source: src/lib.rs
expression: parsed.unwrap().format().unwrap()
---
# a comment
# another one
---
x: 5
