src/snapshots/yaml_subset__tests__elab-2.snap
---
source: src/lib.rs
expression: parsed.unwrap().format().unwrap()
---
---
# test
k: &anch test
# hi
v: &ok
  - &ok2 test
  # comment
  - *test # an anchor
v: test # maybe
k: &kk
  - 5
  - 10
  - "e"
# after
y:
  - x: 5
    z: &zfield 6 # yess
  - n: 8
  - j
# between
z:
  - *kk
  - ke
k:
  - - j
    - k
    - l
  - - m
    - z: k
      t:
        - m: l # comment
          p: 4 # comment
        - m # after m
# wow
# something else
