src/snapshots/yaml_subset__tests__inline_array-2.snap
---
source: src/lib.rs
expression: parsed.unwrap().format().unwrap()
---
---
value:
  - test
  - 5
  - hi
