src/snapshots/yaml_subset__tests__inline_hash-2.snap
---
source: src/lib.rs
expression: parsed.unwrap().format().unwrap()
---
---
field: &test {}
item: {}
item2: { key: "value", other: [ a, b ] }
other:
  # check
  combine: { key: { key: [ l, { a: "b" } ] } }
  item: {}
